[gd_scene load_steps=3 format=2]

[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelLayout/GUI_AbstractLevelLayout.gd" type="Script" id=1]
[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelLayout/LevelLayoutElements/LevelLayout_Cursor/Assets/LevelLayout_Cursor_46x46.png" type="Texture" id=2]

[node name="GUI_AbstractLevelLayout" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="BackgroundContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="LayoutElesContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="MiscContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="Cursor" type="TextureRect" parent="MiscContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="AestheticsContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
